# grad-assignments

./: .gitattributes  .gitignore  README.md
.cursor/rules/: assignment-rules.mdc
CSC6001-Analysis_of_Algorithms/: assignment_1.tex  assignment_2.tex  assignment_3.tex  assignment_4.tex  pyproject.toml
CSC6001-Analysis_of_Algorithms/code/: A3_P2.py  A3_P3.py
CSC6022-Machine_Learning/: README.md  assignment_1.tex  assignment_2.tex  assignment_3.tex  environment.yml  pyproject.toml
CSC6022-Machine_Learning/code/: CSC6022_Homework2_Programming.ipynb  HW1_programming_yacht.ipynb  gp_figure17_7_new.py  gp_figure17_9_new.py  greedy.py  problem6.py  problem9.py  process_cv_results.py  ridge.py  xgboost_boston.py
CSC6022-Machine_Learning/code/programming/: CNN Programming PyTorch.ipynb
CSC6022-Machine_Learning/code/result/: .gitkeep  xgboost_cv_results.csv  xgboost_tree.txt
CSC6022-Machine_Learning/tex/_minted/: 26A373007ECF5725BCE849F27E6E1F85.highlight.minted  _A2A35A650DFBFE6D08F0C3E04B55CA17.index.minted
CSC6022-Machine_Learning/tex/_minted-assignment_2/: 6BF935EF61ACD7BA9E887CBD2DC7764CA52F724B3D132207B43F76547ECF15B8.pygtex
CSC6052-Natural_Language_Processing/: assignment.tex  pyproject.toml
CSC6052-Natural_Language_Processing/prompt/: 24Fall_NLP_Assignment_1_CSC6052_5051_4100_DDA6307_MDS5110.ipynb  CSC6052_CSC5051_MDS5110_Assignment_1.txt
CSC6129-Reinforcement_Learning/: AGENT_INSTRUCTIONS.md  assignment.tex  pyproject.toml
CSC6300-Thesis_Research_(I)/: assignment.tex  pyproject.toml
DDA6040-Dynamic_Programming_and_Stochastic_Control/: assignment_1.tex  assignment_2.tex  assignment_3.tex  environment.yml  final_project.tex  pyproject.toml
DDA6040-Dynamic_Programming_and_Stochastic_Control/code/: a3.py  basic_train.py  p23.py
DDA6040-Dynamic_Programming_and_Stochastic_Control/prompt/: DDA6040_assignment_3.txt  Transformer as Dynamic Programming Solver.md
common_files/: CS_Ph.D._Graduate_Handbook_2025.txt
template/: assignment.tex  environment.yml  pyproject.toml
(+7 files in other folders)
