[project]
name = "csc6022-machine-learning"
version = "0.1.0"
description = "CSC6022 - Machine Learning assignments"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "graphviz>=0.21",
    "ipykernel",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "xgboost>=3.1.2",
]

