[project]
name = "csc6300-thesis-research-i"
version = "0.1.0"
description = "CSC6300 Thesis Research (I)"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
# Uncomment as needed:
# scikit-learn = ["scikit-learn"]
# jupyter = ["jupyter", "ipython"]
# opencv = ["opencv-python"]
# scikit-image = ["scikit-image"]
# pytorch = ["torch", "torchvision", "torchaudio"]



